# Multi-source-heterogeneous-data-collection-and-access-management-software-system

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
app/adapters/: base.py  factory.py  file_adapter.py  file_strategy.py  http_api.py  http_auth.py  http_client.py  http_pagination.py  http_request_builder.py  http_response_parser.py  raw_payload.py  sqlite_adapter.py  sqlite_pager.py
app/api/: routes.py
app/core/: audit.py  config.py  error_codes.py  errors.py  logging.py  runtime.py
app/models/: database.py  entities.py
app/scheduler/: scheduler.py  timeout_monitor.py
app/schemas/: __init__.py  config.py  diagnostics.py  events.py  health.py  history.py  pagination.py  record_stats.py  records.py  runs.py  source_stats.py  sources.py  summary.py  timeline.py
app/services/: backoff.py  bulk_cancel.py  config_service.py  debug_tools.py  diagnostics.py  error_mapper.py  event_constants.py  event_logger.py  events_service.py  history_reader.py  ingestion_service.py  log_enricher.py  metrics.py  monitor_service.py  page_limits.py  payload_audit.py  payload_reader.py  payload_stats.py  queue_metrics.py  rate_limiter.py  record_filter.py  record_limiter.py  record_metadata.py  record_query.py  record_stats.py  run_cleanup.py  run_context.py  run_event_formatter.py  run_filters.py  run_flags.py  run_health.py  run_labeler.py  run_manager.py  run_metrics_logger.py  run_queue.py  run_reporter.py  run_repository.py  (+15 more)
data/: example_source.db
tests/: test_format_detector.py  test_storage.py  test_validator.py
(+29 files in other folders)
