[project]
name = "multi-source-heterogeneous-data-collection-and-access-management"
version = "0.1.0"
description = "Multi-source heterogeneous data collection and access management software system"
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pydantic",
  "pydantic-settings",
  "httpx",
  "pytest"
]
[tool.setuptools]
packages = ["app"]
